--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>   
     <!---Una pequeña reseña de que trata el grupo-->
     <div class="container">
-        <div class="container__director">
+        <div class="container__tarjeta">
             <div class="director">Directores</div>
         
                 <section >
