--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -26,7 +26,7 @@
               />
             </div>
             <label for="menu" class="nav__label"
-              ><img class="nav__img" src="menu.svg" alt=""
+              ><img class="nav__img" src="../menu.svg" alt=""
             /></label>
             <input type="checkbox" id="menu" class="nav__input" />
             <ul class="nav__list">
