--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -22,7 +22,7 @@
               <img id="logo" src="../imagenes sol/logo/logo sol.png" alt="" />
             </div>
             <label for="menu" class="nav__label"
-              ><img class="nav__img" src="menu.svg" alt=""
+              ><img class="nav__img" src="../menu.svg" alt=""
             /></label>
             <input type="checkbox" id="menu" class="nav__input" />
             <ul class="nav__list">
@@ -47,18 +47,36 @@
       </div>
     </header>
     <!--Fietpo (scroll animado)-->
+    <h1 class="titulo">Fietpo</h1>
+    <h3 class="titulo">(Festival Itinerante de Encuentro de Teatro Popular)</h3>
     <section>
-      <article>
-        <img src="../imagenes sol/sol/imagen6.jpg" alt="" />
-        <p>
+      <article class="article">
+        <img
+          class="fietpo__imagenes"
+          src="../imagenes sol/sol/imagen9.jpg"
+          alt=""
+        />
+        <p class="parrafos">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit.
           Voluptatibus, quo magni tempore fugit ratione repellat minima atque
-          laborum obcaecati perferendis!
+          laborum obcaecati perferendis! Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Doloribus similique alias voluptatum maiores
+          voluptas ullam aliquid fugit animi. Laboriosam blanditiis assumenda, a
+          illo vel deleniti cumque ut nesciunt ipsum optio corporis aliquam
+          ullam amet corrupti nobis ipsa deserunt fuga rerum facere distinctio
+          facilis velit? Rerum molestias vero sed modi dolores placeat obcaecati
+          culpa eaque in. Reprehenderit laborum commodi dicta cum ratione quae
+          id asperiores, alias nam? Tempore, suscipit perferendis quibusdam
+          mollitia expedita, obcaecati, dolores dolorum repellendus blanditiis
+          error voluptates officia repudiandae atque magni doloremque? Et, dicta
+          minima illo sint cumque dignissimos voluptatum consequuntur iste
+          nostrum, rem amet quis quae sed.
         </p>
       </article>
       <!--video-->
-      <article>
+      <article class="article">
         <iframe
+          class="youtube"
           width="560"
           height="315"
           src="https://www.youtube.com/embed/tOJYYVInWvg"
@@ -69,9 +87,13 @@
         >
         </iframe>
       </article>
-      <article>
-        <img src="../imagenes sol/sol/imagen4.jpg" alt="" />
-        <p>
+      <article class="article">
+        <img
+          class="fietpo__imagenes"
+          src="../imagenes sol/sol/fietpo 4.jpg"
+          alt=""
+        />
+        <p class="parrafos">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
           corrupti, non iste dignissimos voluptatum velit. Molestias a sequi
           adipisci officia.
