--- a/pages/historia.html
+++ b/pages/historia.html
@@ -22,7 +22,7 @@
               <img id="logo" src="../imagenes sol/logo/logo sol.png" alt="" />
             </div>
             <label for="menu" class="nav__label"
-              ><img class="nav__img" src="menu.svg" alt=""
+              ><img class="nav__img" src="../menu.svg" alt=""
             /></label>
             <input type="checkbox" id="menu" class="nav__input" />
             <ul class="nav__list">
@@ -55,29 +55,28 @@
     <!--Historia (scroll animado)-->
     <section>
       <h1 class="titulo">Historia</h1>
-      <article>
-        <img
-          src="../imagenes sol/sol/imagen9.jpg"
+      <article class="historia__article">
+        <img class="historia__imagenes"
+          src="../imagenes sol/sol/fietpo2.jpg"
           alt=""
-          width="900px"
-          height="700px"
         />
-        <p>
+        <p class="parrafos">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam,
           repellendus! Lorem ipsum, dolor sit amet consectetur adipisicing elit.
           Ab deserunt porro optio, adipisci neque accusantium possimus. Tempora,
           quasi beatae? Totam cumque ratione eius aliquid minima culpa pariatur
-          eum atque. Exercitationem.
+          eum atque. Exercitationem. Lorem ipsum dolor sit, amet consectetur 
+          adipisicing elit. Rerum nisi ea magnam inventore reiciendis deserunt, 
+          enim sequi repudiandae! Ipsum sunt harum consequatur est quibusdam ea 
+          aperiam accusantium explicabo cum adipisci.
         </p>
       </article>
-      <article>
-        <img
+      <article class="historia__article">
+        <img class="historia__imagenes"
           src="../imagenes sol/sol/imagen6.jpg"
           alt=""
-          width="900px"
-          height="700px"
         />
-        <p>
+        <p class="parrafos">
           Lorem Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe
           repellat minima in atque fugit tenetur dicta aliquid quod doloribus,
           numquam reprehenderit ex quos odio, sint iusto reiciendis harum
@@ -85,14 +84,12 @@
           Illo temporibus accusamus commodi illum provident dolorum!
         </p>
       </article>
-      <article>
-        <img
+      <article class="historia__article">
+        <img class="historia__imagenes"
           src="../imagenes sol/sol/imagen8.jpg"
           alt=""
-          width="900px"
-          height="700px"
         />
-        <p>
+        <p class="parrafos">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
           neque cupiditate cum libero alias? Dolores excepturi consectetur
           voluptates omnis dolorem quis veniam temporibus quam laborum eligendi,
