--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+imagenes<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -22,7 +22,7 @@
               <img id="logo" src="../imagenes sol/logo/logo sol.png" alt="" />
             </div>
             <label for="menu" class="nav__label"
-              ><img class="nav__img" src="menu.svg" alt=""
+              ><img class="nav__img" src="../menu.svg" alt=""
             /></label>
             <input type="checkbox" id="menu" class="nav__input" />
 
@@ -47,36 +47,45 @@
         </nav>
       </div>
     </header>
-    <section>
-      <div>
-        <img src="../imagenes sol/sol/imagen4.jpg" alt="" />
+    <div class="container">
+      <div class="container__tarjeta1">
+        <h1 class="titulo">Nuestros servicios</h1>
+        <section>
+          <!-- <div>
+        <img
+          class="servicios__imagenes"
+          src="../imagenes sol/sol/imagen4.jpg"
+          alt=""
+        />
+      </div> -->
+          <!--talleres-->
+          <article class="imagenes">
+            <p class="servicios__titulo">Funciones de teatro</p>
+            <img src="../imagenes sol/sol/portada2.jpg" alt="" />
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
+              accusantium!
+            </p>
+          </article>
+          <article class="imagenes">
+            <p class="servicios__titulo">Talleres</p>
+            <img src="../imagenes sol/sol/talleres.jpg" alt="" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis, molestiae?
+            </p>
+          </article>
+          <article class="imagenes">
+            <p class="servicios__titulo">Batucada</p>
+            <img src="../imagenes sol/sol/batucada.jpg" alt="" />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero,
+              commodi.
+            </p>
+          </article>
+        </section>
       </div>
-      <!--talleres-->
-      <article>
-        <p>Funciones de teatro</p>
-        <img src="../imagenes sol/sol/imagen9.jpg" alt="" />
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
-          accusantium!
-        </p>
-      </article>
-      <article>
-        <p>Talleres</p>
-        <img src="../imagenes sol/sol/imagen1.jpg" alt="" />
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis,
-          molestiae?
-        </p>
-      </article>
-      <article>
-        <p>Batucada</p>
-        <img src="../imagenes sol/sol/imagen3.jpg" alt="" />
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero,
-          commodi.
-        </p>
-      </article>
-    </section>
+    </div>
     <!--footer-->
     <div class="container">
       <div class="container__footer">
